--- a/api.html
+++ b/api.html
@@ -76,7 +76,15 @@
 
     <div id="results"></div>
 
-    <script src="config.js"></script>
+    <!-- Load config.js only in local development -->
+    <script>
+        if (window.location.hostname === "localhost") {
+            const script = document.createElement("script");
+            script.src = "config.js";
+            document.body.appendChild(script);
+        }
+    </script>
+
     <script src="main.js"></script>
 </body>
 </html>
