--- a/api.html
+++ b/api.html
@@ -76,15 +76,9 @@
 
     <div id="results"></div>
 
-    <!-- Load config.js only in local development -->
-    <script>
-        if (window.location.hostname === "localhost") {
-            const script = document.createElement("script");
-            script.src = "config.js";
-            document.body.appendChild(script);
-        }
-    </script>
-
-    <script src="main.js"></script>
+    <!-- Load config.js first -->
+    <script src="config.js"></script>
+    <!-- Load the main script -->
+    <script src="script.js"></script>
 </body>
 </html>
